# seekme

./: README.md
lab1/take-home/: README.md
lab1/take-home/grep/: CMakeLists.txt  autograde_grep.py  grep.c  grep.h  grep_test.c
lab1/take-home/ls_command/: ls.c
lab2/take-home/: CMakeLists.txt  README.md  myfs.c  params.h  test.py
